--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/RomaSamkov/node-blog/issues"
   },
-  "homepage": "https://github.com/RomaSamkov/node-blog#readme"
+  "homepage": "https://github.com/RomaSamkov/node-blog#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
+  }
 }
