--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RomaSamkov/node-blog.git"
+    "url": "git+https://github.com/RomaSamkov/node-blog.git",
+    "start": "node server"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "morgan": "^1.10.0"
   }
