--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RomaSamkov/node-blog.git",
-    "start": "node server"
+    "start": "node server",
+    "start:dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
